changed titles to match

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--want this to be narrow app so use grid system && center offset-->
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <h1 class="text-center mb-4">Numbering System Converter</h1>
+                <h1 class="text-center mb-4">Numbering Systems Converter</h1>
                 <form>
                     <div class="form-group">
                         <input id="decimalInput" type="number" class="form-control form-control-lg" placeholder="Enter decimal">
